Update homepage content and add TikTok link style
Expanded the homepage with additional information about After Effects edits and TikTok uploads, reorganized sections for languages and skills, added a contact section, and introduced a custom style for TikTok links in styles.css.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 </head>
 <body>
     <h1>jucid<span class="purplespan">SHARP</span></h1>
-    <p>I mess with front-end, a bit of back-end and other tech type of stuff for personal projects.</p>
+    <p>I mess with front-end, a bit of back-end, and other tech type of stuff for personal projects.
+    I create edits in <span class="purplespan">After Effects</span> and upload them in my <a class="tiktok" href="https://www.tiktok.com/@jucidsharp">TikTok</a>.</p>
     <p>I've worked on a few projects, and I would love to collaborate, or work for others.</p>
-    <h3>Languages & Technologies</h3>
+    <h3>Languages</h3>
     <ul>
         <li><span class="yellowspan">JavaScript</span></li>
         <li><span class="bluespan">Python</span></li>
         <li><span class="redspan">HTML</span></li>
     </ul>
+
+    <h3>Skills & Frameworks</h3>
 
     <ul>
         <li><span class="greenspan">Node.js</span></li>
@@ -25,6 +28,9 @@
     <h3>Projects</h3>
     <ul>
         <li><a href="example.com">API Vault</a></li>
+        <li>More projects coming soon..</li>
     </ul>
+    <h3>Contact</h3>
+    <p>Feel free to reach out to me on <a href="https://github.com/jucidsharp">GitHub</a>, <a class="mail" href="mailto:jucidedits@gmail.com">Email</a>, or Discord (@lucidpvp_</p>
 </body>
 </html>
