--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <h1>jucid<span class="purplespan">SHARP</span></h1>
+    <h1>Lumma<span class="purplespan">SHARP</span></h1>
     <p>I mess with front-end, a bit of back-end, and other tech type of stuff for personal projects.
-    I create edits in <span class="purplespan">After Effects</span> and upload them in my <a class="tiktok" href="https://www.tiktok.com/@jucidsharp">TikTok</a>.</p>
+    I create edits in <span class="purplespan">After Effects</span> and upload them in my <a class="tiktok" href="https://www.tiktok.com/@shardrow">TikTok</a>.</p>
     <p>I've worked on a few projects, and I would love to collaborate, or work for others.</p>
     <h3>Languages</h3>
     <ul>
@@ -31,6 +31,6 @@
         <li>More projects coming soon..</li>
     </ul>
     <h3>Contact</h3>
-    <p>Feel free to reach out to me on <a href="https://github.com/jucidsharp">GitHub</a>, <a class="mail" href="mailto:jucidedits@gmail.com">Email</a>, or Discord (@lucidpvp_</p>
+    <p>Feel free to reach out to me on <a href="https://github.com/lummasharp">GitHub</a>, <a class="mail" href="mailto:lummasharp@gmail.com">Email</a>, or Discord (@lummasharp)</p>
 </body>
 </html>
