--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Lumma<span class="purplespan">SHARP</span></h1>
-    <p>I mess with front-end, a bit of back-end, and other tech type of stuff for personal projects.
-    I create edits in <span class="purplespan">After Effects</span> and upload them in my <a class="tiktok" href="https://www.tiktok.com/@shardrow">TikTok</a>.</p>
-    <p>I've worked on a few projects, and I would love to collaborate, or work for others.</p>
+    <p>I mess with front-end, back-end, and other tech stuff for personal projects.
+    I create edits in <span class="purplespan">After Effects</span> and upload them on my <a class="tiktok" href="https://www.tiktok.com/@shardrow">TikTok</a>.</p>
+    <p>I've worked on a few projects, and I would love to collaborate and/or work for others.</p>
     <h3>Languages</h3>
     <ul>
         <li><span class="yellowspan">JavaScript</span></li>
@@ -21,7 +21,7 @@
 
     <ul>
         <li><span class="greenspan">Node.js</span></li>
-        <li><span class="brownspan">Modding Games (Minecraft, Terraria <span class="mini">u.c</span>)</li>
+        <li><span class="brownspan">Modding Games (Minecraft, Terraria <span class="mini">u.c</span>)</span></li>
         <li><span class="bluespan">Discord Bots</span></li>
     </ul>
 
@@ -31,6 +31,6 @@
         <li>More projects coming soon..</li>
     </ul>
     <h3>Contact</h3>
-    <p>Feel free to reach out to me on <a href="https://github.com/lummasharp">GitHub</a>, <a class="mail" href="mailto:lummasharp@gmail.com">Email</a>, or Discord (@lummasharp)</p>
+    <p>Feel free to reach out to me on <a href="https://github.com/lummasharp">GitHub</a>, <a class="mail" href="mailto:lummasharp@gmail.com">via e-mail</a>, or Discord (@lummasharp)</p>
 </body>
 </html>
